--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
         <title>Shuttle: Powerful cross-platform localization</title>
         <meta name="description" content="powerful cross-platform localization">
         <meta name="viewport" content="width=device-width">
+        <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700' rel='stylesheet' type='text/css'>
         <%= stylesheet_link_tag 'all' %>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
     </head>
