--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,7 +22,7 @@
     <div class="container">
       <h1> Powerful cross-platform localization </h1>
       <h3> Create for open-source by square</h3>
-      <a href="#" class="button">Start Using Shuttle </a>
+      <a href="https://github.com/square/shuttle" class="button">Start Using Shuttle </a>
     </div> 
   </div>
 
