Fixes small typo

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,7 +21,7 @@
   <div id="hero-container">
     <div class="container">
       <h1> Powerful cross-platform localization </h1>
-      <h3> Create for open-source by square</h3>
+      <h3> Created for open-source by square</h3>
       <a href="https://github.com/square/shuttle" class="button">Start Using Shuttle </a>
     </div> 
   </div>
