Uses http not https

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -170,7 +170,7 @@
     <a href="https://github.com/square/shuttle" class="button">Start Using Shuttle </a>
   </div> 
   <div> 
-    <a href="https://square.github.io"> See other Square open-source projects </a>
+    <a href="http://square.github.io"> See other Square open-source projects </a>
   </div>
 </footer>
 
