--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -5,6 +5,7 @@
       <div class="translation-side"> 
         <textarea class="translation-area {{status}}">{{translation_copy}}</textarea>
         <button class="small default copy-source">Copy from source</button>
+        <button class="small default convert-source">Convert source</button>
 
         <span class="controls">
           <!-- {{#controls}} -->
@@ -27,8 +28,10 @@
           <button class="small submit convert-source">Convert from source</button>
         {{/convert_source}}
         -->
-        <div class="half tips"></div>
-        <div class="half alerts"></div>
+        <div class="notes">
+          <div class="half tips"></div>
+          <div class="half alerts"></div>
+        </div>
       </div>
     </div>
 
