Adds UI for highlight translation search
Conflicts:
	app/assets/javascripts/translation_workbench.js.coffee

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,3 +48,4 @@
 @import "partials/translation_workbench";
 @import "partials/worker_status";
 @import "partials/tooltip";
+@import "partials/highlighter";
