--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -8,14 +8,14 @@
         <button class="small default convert-source">Convert source</button>
 
         <span class="controls">
-          <!-- {{#controls}} -->
+          {{#controls}}
             <button class="square approve">
               <i class="fa fa-check"></i>
             </button>
             <button class="square reject">
               <i class="fa fa-ban"></i>
             </button>
-          <!-- {{/controls}} -->
+          {{/controls}}
           <button class="default square expand-link">
             <i class="fa fa-pencil-square-o"></i>
           </button>
