--- a/app/views/locale/projects/show.js.coffee.erb
+++ b/app/views/locale/projects/show.js.coffee.erb
@@ -14,19 +14,20 @@
 
 $(document).ready ->
   locale_select = $(".locale-select").find(".locale-field, select")
-  locale_select.val "<%= @locale.rfc5646 %>"  
+  locale_select.val "<%= @locale.rfc5646 %>"
 
   $(".translate-link").click () ->
     project = $(this).data('project')
     sha = $(this).data('sha')
     locale = locale_select.val()
-    url = '/locales/' + encodeURIComponent(locale) + '/projects/' + encodeURIComponent(project) + '?commit=' + sha    
+    url = '/locales/' + encodeURIComponent(locale) + '/projects/' + encodeURIComponent(project) + '?commit=' + sha
     window.location = url
-  
+
   new TranslationWorkbench(
-    $(".translation-workbench"), 
-    $(".filter-bar form"), 
-    "<%= locale_project_translations_url(@locale, @project, format: 'json') %>", 
+    $(".translation-workbench"),
+    $(".filter-bar form"),
+    "<%= locale_project_translations_url(@locale, @project, format: 'json') %>",
+    "<%= search_translations_url %>",
     JSON.parse("<%= escape_javascript @glossary_entries.to_json %>"),
     {
       review: <%= current_user.reviewer?.inspect %>,
