--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -18,8 +18,6 @@
   = controller_name
 - content_for :id do 
   = [controller_name, action_name].join('-')
-- content_for :footer do
-  true
 
 .header
   h1 Dashboard
@@ -29,163 +27,85 @@
 hr.divider
 
 .border
-  - project_list = Project.order('LOWER(name) ASC').map { |pr| [pr.name, pr.id] }
-  - project_list.unshift ['projects in my locales', 'my-locales'] if current_user.approved_locales.any?
-  - project_list.unshift ['all projects', nil]
+  = render partial: 'filter_bar'
 
-  .filter-bar#filter
-    = form_tag({}, id: 'filter', method: 'get')
-      .main
-        = text_field_tag 'sha', @sha, placeholder: '9d613f'
-        = select_tag 'project_id', options_for_select(project_list, params[:project_id])
-
-        - if current_user.approved_locales.any?
-          - locales = current_user.approved_locales.map { |locale| [locale.name, locale.rfc5646] }
-          - locales.unshift ['my locales', current_user.approved_locales.map(&:rfc5646).join(',')]
-          - locales.unshift ['all locales', nil]
-          = select_tag 'locales', options_for_select(locales, @locales.map(&:rfc5646).join(','))
-        - else
-          = text_field_tag 'locales', @locales.map(&:rfc5646).join(','), placeholder: 'Locale', class: 'locale-field'
-        = submit_tag 'Filter', class: 'primary'
-        .pull-right#expand-search
-          i.icon-angle-right
-
-      .collapse
-        .control-group
-          = label_tag 'status', 'Project Status', class: 'control-label'
-          .controls
-            = select_tag 'status', options_for_select(\
-              %w(all uncompleted completed).map { |n| ["#{n} translations", n] },\
-              @status\
-            )
-          .controls
-            = check_box_tag 'email', current_user.email, params[:email] == current_user.email
-            | Only commits from me
-          .controls
-            = check_box_tag 'exported', 'true', params[:exported] == 'true'
-            | Include exported commits
-  / if params[:sorting]
-  table.table.hover-rows#commits 
+  table.table.hover-rows#commits
     thead
       tr
+        / Project Status
         th 
         th Project
         th SHA
         / Create Date
         th
           - if params[:sort] == 'create'
-            - if params[:asc_desc] == 'asc'
-              = link_to 'Created <i class="icon-caret-down"></i>'.html_safe, request.parameters.merge({sort: 'create', asc_desc: 'desc'})
+            - if params[:direction] == 'asc'
+              = link_to request.parameters.merge({sort: 'create', direction: 'desc'}) do
+                | Created &nbsp;
+                i.icon-caret-down
             - else
-              = link_to 'Created <i class="icon-caret-up"></i>'.html_safe, request.parameters.merge({sort: 'create', asc_desc: 'asc'})
+              = link_to request.parameters.merge({sort: 'create', direction: 'asc'}) do
+                | Created &nbsp;
+                i.icon-caret-up
           - else
-            = link_to 'Created', request.parameters.except(:asc_desc).merge(sort: 'create')
+            = link_to 'Created', request.parameters.except(:direction).merge(sort: 'create')
         / Due Date
         th
           - if params[:sort] == 'due'
-            - if params[:asc_desc] == 'desc'
-              = link_to 'Due Date <i class="icon-caret-up"></i>'.html_safe, request.parameters.merge({sort: 'due', asc_desc: 'asc'})
+            - if params[:direction] == 'desc'
+              = link_to request.parameters.merge({sort: 'due', direction: 'asc'}) do
+                | Due Date&nbsp;
+                i.icon-caret-up
             - else
-              = link_to 'Due Date <i class="icon-caret-down"></i>'.html_safe, request.parameters.merge({sort: 'due', asc_desc: 'desc'})
+              = link_to request.parameters.merge({sort: 'due', direction: 'desc'}) do
+                | Due Date&nbsp;
+                i.icon-caret-down
           - else
-            = link_to 'Due Date', request.parameters.except(:asc_desc).merge(sort: 'due')
+            = link_to 'Due Date', request.parameters.except(:direction).merge(sort: 'due')
         / Priority
         th
           - if params[:sort] == 'priority' || params[:sort].nil?
-            - if params[:asc_desc] == 'desc'
-              = link_to 'Priority <i class="icon-caret-up"></i>'.html_safe, request.parameters.merge({sort: 'priority', asc_desc: 'asc'})
+            - if params[:direction] == 'desc'
+              = link_to request.parameters.merge({sort: 'priority', direction: 'asc'}) do
+                | Priority &nbsp;
+                i.icon-caret-up
             - else
-              = link_to 'Priority <i class="icon-caret-down"></i>'.html_safe, request.parameters.merge({sort: 'priority', asc_desc: 'desc'})
+              = link_to request.parameters.merge({sort: 'priority', direction: 'desc'}) do
+                | Priority &nbsp;
+                i.icon-caret-down
+
           - else
-            = link_to 'Priority', request.parameters.except(:asc_desc).merge(sort: 'priority')
+            = link_to 'Priority', request.parameters.except(:direction).merge(sort: 'priority')
 
         th Description
         th Translate
         th Review
+        / Translation Button
         - if current_user.translator?
           th 
     tbody 
       - @commits.each do |commit|
         tr.row_class
           / Project Status
-          ruby: 
-            if commit.loading?
-              commit_state = 'commit-loading'
-            elsif commit.ready?
-              commit_state = 'commit-ready'
-            else
-              commit_state = 'commit-translating'
-            end
-          td class=commit_state
+          td class=(if commit.loading? then 'commit-loading' else (commit.ready? ? 'commit-ready' : 'commit-translating') end)
 
           / Project Name
           td = commit.project.name
 
           / Commit
-          td
-            = link_to commit.revision[0, 6], project_commit_url(commit.project, commit)
+          td = link_to commit.revision[0, 6], project_commit_url(commit.project, commit)
 
           / Project Create Date
           td.centered = commit.created_at.strftime('%m/%d/%Y')
 
           / Project Due Date
-          td.due-date class=("centered" if !commit.due_date)
-            - if current_user.admin?
-              = form_for commit, url: project_commit_url(commit.project, commit, format: 'json') do |f|
-                = f.text_field  :due_date, \
-                                value: (f.object.due_date.strftime('%m/%d/%Y') if !f.object.due_date.nil?),\
-                                class: 'datepicker'
-            - else 
-              - if commit.due_date
-                ruby: 
-                  date_class =  if commit.due_date < 2.days.from_now.to_date
-                                  'due-date-very-soon'
-                                elsif commit.due_date < 5.days.from_now.to_date
-                                  'due-date-soon'
-                                else
-                                  nil
-                                end
-                span class="#{date_class}" = l(commit.due_date, format: :mon_day_year)
-              - else 
-                | -
+          td.due-date class=('centered' if !commit.due_date) = render partial: 'table_due_date', locals: { commit: commit }
 
           / Project Priority
-          td.centered
-            - if current_user.admin?
-              = form_for commit, url: project_commit_url(commit.project, commit, format: 'json') do |f|
-                = f.select :priority, \
-                            t('models.commit.priority').to_a.map(&:reverse).unshift(['-', nil]), \
-                            {}, \
-                            class: 'styled'
-            - else
-              - if commit.priority
-                span class="commit-priority-#{commit.priority}" 
-                  | P 
-                  = t("models.commit.priority.#{commit.priority}")
-              - else
-                | -
+          td.centered = render partial: 'table_priority', locals: { commit: commit }
 
           / Project Description
-          td class=("centered" if !commit.description)
-            ruby:
-              description = commit.description
-              full_description = nil
-              if commit.description
-                full_description = description.dup
-                if commit.user
-                  full_description << "<br><strong>Requested by " + mail_to(commit.user.email, commit.user.abbreviated_name) + "</strong>"
-                end
-                if commit.github_url or commit.pull_request_url
-                  full_description << "<br><strong>Links: </strong>"
-                  full_description << ( link_to "Code", commit.github_url ) if commit.github_url
-                  if commit.pull_request_url
-                    full_description << " / " if commit.github_url
-                    full_description << ( link_to 'PR', commit.pull_request_url )
-                  end
-                end
-              end
-            div.description[data-full-description=full_description data-short-description=truncate(description || '-', length: 50)]
-              = truncate(description || '-', length: 50)
+          td class=('centered' if !commit.description) = render partial: 'table_description', locals: { commit: commit }
 
           / Word Translation Count
           td = "#{number_with_delimiter commit.translations_new(*@locales)}s (#{number_with_delimiter commit.words_new(*@locales)}w)"
@@ -194,63 +114,12 @@ hr.divider
           td = "#{number_with_delimiter commit.translations_pending(*@locales)}s (#{number_with_delimiter commit.words_pending(*@locales)}w)"
 
           / Translation Button
-          - if current_user.translator?
-            - if current_user.role == 'admin'
-              td
-                - locale = commit.project.required_locales.any? ? commit.project.required_locales.first.rfc5646 : "fr"
-                input.submit.translate-link[
-                  type="button"
-                  data-sha=commit.revision 
-                  data-project=commit.project.to_param
-                  data-locale=locale
-                  value="Translate"]
-            - elsif current_user.approved_locales.any?
-              td 
-                - locale = current_user.approved_locales.first
-                input.submit.translate-link[
-                  type="button"
-                  data-sha=commit.revision 
-                  data-project=commit.project.to_param
-                  data-locale=locale.rfc5646
-                  value="Translate"] 
-            - else 
-              td
-                button.submit disabled="disabled" No locales 
+          = render partial: 'table_translation_button', locals: { commit: commit }
 
 .row 
   .pagination-links
     = paginate @commits
 .row
-  .pagination-info= page_entries_info(@commits)
+  .pagination-info = page_entries_info(@commits)
 
-- if Project.count > 0
-  .row
-    .modal.twelve.columns#add-translation
-      a.close ×
-      - projects = Project.order('LOWER(name) ASC')
-      = form_for(Commit.new, url: project_commits_path(projects.first, format: 'json')) do |f|
-        h2 Translation Request
-        .modal-body
-          .half
-            .control-group
-              = label_tag 'new_commit_project_id', Commit.human_attribute_name(:project_id), class: 'control-label'
-              .controls
-                = select_tag 'new_commit_project_id', options_for_select(projects.map { |pr| [pr.name, pr.to_param] }), required: true
-            .control-group
-              = f.label :revision, class: 'control-label'
-              .controls
-                = f.text_field :revision, required: true
-            .control-group
-              = f.label :due_date, class: 'control-label'
-              .controls
-                = f.text_field :due_date, class: 'datepicker'
-            .control-group
-              = f.label :pull_request_url, class: 'control-label'
-              .controls
-                = f.text_field :pull_request_url
-          .half
-            .control-group
-              = f.label :description, class: 'control-label'
-              .controls
-                = f.text_area :description, rows: 7
-            = f.submit class: 'primary'
+= render partial: 'modal_add_translation'
